--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
+  <h1>
+    Horns Gallery
+  </h1>
   <form>
+    <label>Filter by Keyword:</label>
     <select>
     </select>
   </form>
