--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
   <link rel="stylesheet" href="css/base.css" type="text/css" />
   <link rel="stylesheet" href="css/layout.css" type="text/css" />
   <link rel="stylesheet" href="css/module.css" type="text/css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
   <title>Hook Em Horns</title>
 </head>
 
 <body>
+  <script id="entry" type="text/x-handlebars-template">
+    <div class="image {{keyword}}">
+      <h2>{{title}}</h2>
+      <img src="{{path}}"/>
+    </div>
+  </script>
   <h1>
     Horns Gallery
   </h1>
@@ -23,9 +30,8 @@
   </form>
   <div id="horns">
   </div>
-  <script src="https://code.jquery.com/jquery-3.4.0.min.js"
-    integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
