--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <select id="keyword"></select>
     <label>Sort:</label>
     <select id="sort"></select>
+    <label>Page:</label>
+    <select id="page"></select>
   </form>
   <div id="horns">
   </div>
