--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
    <div class="image {{keyword}}">
       <h2>{{title}}</h2>
       <img src="{{path}}"/>
+      <p>{{desc}}</p>
     </div>
   </script>
   <header>
